2012-12-19  Filip Pizlo  <fpizlo@apple.com>

        JSObject::ensure<IndexingType> should gracefully handle InterceptsGetOwn..., and should never be called when the 'this' is not an object
        https://bugs.webkit.org/show_bug.cgi?id=105468

        Reviewed by Mark Hahnenberg, Oliver Hunt, and Gavin Barraclough.

        * fast/js/dfg-ensure-array-storage-on-string-expected.txt: Added.
        * fast/js/dfg-ensure-array-storage-on-string.html: Added.
        * fast/js/dfg-ensure-contiguous-on-string-expected.txt: Added.
        * fast/js/dfg-ensure-contiguous-on-string.html: Added.
        * fast/js/jsc-test-list
        * fast/js/script-tests/dfg-ensure-array-storage-on-string.js: Added.
        (foo):
        * fast/js/script-tests/dfg-ensure-contiguous-on-string.js: Added.
        (foo):

2012-12-19  W. James MacLean  <wjmaclean@chromium.org>

        [chromium] plugins/npp-set-window-called-during-destruction.html is flaky on Win
        http://crbug.com/78835

        Unreviewed gardening.

        * platform/chromium/TestExpectations:

2012-12-19  W. James MacLean  <wjmaclean@chromium.org>

        [chromium] composited scrolling tests failing on Win
        https://bugs.webkit.org/show_bug.cgi?id=105471

        Unreviewed gardening.

        Mark tests as failing on Win:

        platform/chromium/virtual/gpu/compositedscrolling/overflow/scrolling-without-painting.html
        platform/chromium/virtual/gpu/compositedscrolling/overflow/updating-scrolling-content.html

        * platform/chromium/TestExpectations:

2012-12-19  Emil A Eklund  <eae@chromium.org>

        [Regression] text-overflow ellipsis clips content when zoomed
        https://bugs.webkit.org/show_bug.cgi?id=105456

        Reviewed by Levi Weintraub.

        Add test for text-overflow: ellipsis.

        * fast/sub-pixel/ellipsis-zoom-expected.html: Added.
        * fast/sub-pixel/ellipsis-zoom.html: Added.

2012-12-19  Levi Weintraub  <leviw@chromium.org>
