@@ -1,3 +1,13 @@
+2012-12-19  Eric Carlson  <eric.carlson@apple.com>
+
+        Update video-controls-captions-trackmenu.html
+        https://bugs.webkit.org/show_bug.cgi?id=105455
+
+        Reviewed by Dean Jackson.
+
+        * media/video-controls-captions-trackmenu-expected.txt: Update results.
+        * media/video-controls-captions-trackmenu.html: Update test to account for sorted menu.
+
 2012-12-19  Filip Pizlo  <fpizlo@apple.com>
 
         JSObject::ensure<IndexingType> should gracefully handle InterceptsGetOwn..., and should never be called when the 'this' is not an object
